--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 body {
+  background-color: #e3e3e3 !important;
+  font-family: 'Open Sans',serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
